tests/errors/preprocessor/after_ident_must_be_space.c
#define KEK=

int main()
{
	return 0;
}
